# diffusion

./: .dive-ci.yml  .gitignore  .gitmodules  ARTIFACT_MANAGEMENT.md  CHANGELOG.md  DEFAULT_REGISTRY_CHANGES.md  MIGRATION_GUIDE.md  Makefile  README.md  ROLE_COMMAND_CHANGES.md  VAULT_FIELD_REFACTORING.md  artifact_cli_test.go  artifact_env_test.go  aws_cli_test.go  cache.go  cache_test.go  collection_command_test.go  collection_version_constraint_test.go  compatibility_demo_test.go  config.go  config_helpers_test.go  config_omitempty_test.go  config_test.go  constants.go  constants_test.go  defaults_test.go  dependency.go  dependency_lock.go  dependency_lock_resolution_test.go  dependency_lock_scenario_test.go  dependency_removal_test.go  dependency_test.go  deps_init_test.go  deps_sync_test.go  galaxy_api.go  galaxy_api_git_test.go  galaxy_api_resolve_test.go  galaxy_api_test.go  gcp_cli_test.go  go.mod  (+16 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  enhancement.yml  feature_request.yml
actions/: diffusion-test.yml
chocolatey/: README.md  diffusion.nuspec
diffusion-test/: README.md  action.yml
diffusion-update/: README.md  action.yml
docs/: DEPENDENCY_MANAGEMENT.md  README.md  ROLE_VERSION_CONSTRAINTS.md  building.md  cache-feature.md  changelog.md  index.html  unix-permissions.md  verification.md
examples/: README.md  diffusion-with-deps.toml  integration_test.sh  test_compatibility.sh
mcp/: .dockerignore  .gitignore  .hadolint.yaml  Dockerfile  Makefile  README.md  pyproject.toml
mcp/diffusion_mcp/: __init__.py  server.py
(+136 files in other folders)
