[project]
name = "diffusion-mcp"
version = "0.1.0"
description = "MCP server for managing and troubleshooting Diffusion CLI environments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Daniel Dalavurak" },
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
diffusion-mcp = "diffusion_mcp.server:main"
